add div's and add loaders and base style

--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <script src="bundle.js"></script>
+    <script src="/bundle.js"></script>
 </head>
 <body>
 
+
+        <div id="container">
+            <div id="left">
+dsafgdsfsa
+            </div>
+            <div id="left-separator"></div>
+            <div id="bottom">
+fdsafdsafs
+            </div>
+            <div id="right-seperator"></div>
+            <div id="right">
+afdsafd
+            </div>
+        </div>
 </body>
 </html>
