Add increment to BigCookie click and change names of functions

--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <script src="/bundle.js"></script>
 </head>
 <body>
 
 
         <div id="container">
             <div id="left">
-dsafgdsfsa
+                <div class="" id="big-cookie-container">
+                    <div id="amountOfCookies"></div>
+                    <img id="big-cookie" src="/images/cookie.png" alt="">
+                </div>
             </div>
             <div id="left-separator"></div>
             <div id="bottom">
@@ -23,5 +25,7 @@ fdsafdsafs
 afdsafd
             </div>
         </div>
+
+<script src="/bundle.js"></script>
 </body>
 </html>
