Add dynamically rendered list of productions
increment and decrement cookies while buying

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,12 @@ fdsafdsafs
             </div>
             <div id="right-seperator"></div>
             <div id="right">
-afdsafd
+                <div id="production-cursor" class="cursor production"></div>
+                <div id="production-grandma" class="grandma production"></div>
+                <div id="production-farm" class="farm production"></div>
+                <div id="production-mine" class="mine production"></div>
+                <div id="production-factory" class="factory production"></div>
+
             </div>
         </div>
 
