connected to indexedDB

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@ fdsafdsafs
                 <div id="production-farm" class="farm production"></div>
                 <div id="production-mine" class="mine production"></div>
                 <div id="production-factory" class="factory production"></div>
+                <button id="save-data"></button>
             </div>
         </div>
 <script src="/bundle.js"></script>
