Changed names, remove other classes than producer
create init function of game class and move a lot of stuff with DOM element, DOMContentloaded prevent
improved reading and writin to database
make easier create a new producer by create an array of list of producers

--- a/public/index.html
+++ b/public/index.html
@@ -21,11 +21,11 @@ fdsafdsafs
             </div>
             <div id="right-seperator"></div>
             <div id="right">
-                <div id="production-cursor" class="cursor production"></div>
-                <div id="production-grandma" class="grandma production"></div>
-                <div id="production-farm" class="farm production"></div>
-                <div id="production-mine" class="mine production"></div>
-                <div id="production-factory" class="factory production"></div>
+                <div id="producer-cursor" class="cursor producer"></div>
+                <div id="producer-grandma" class="grandma producer"></div>
+                <div id="producer-farm" class="farm producer"></div>
+                <div id="producer-mine" class="mine producer"></div>
+                <div id="producer-factory" class="factory producer"></div>
                 <button id="save-data"></button>
             </div>
         </div>
