added multiply buying
buy 1 or 10 or 100 producers

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,14 @@ fdsafdsafs
             </div>
             <div id="right-seperator"></div>
             <div id="right">
+                    <div id="buy-sell-mode">
+                        <div id="buy">Buy</div>
+                        <div id="sell">Sell</div>
+                            <div id="store1">1</div>
+                            <div id="store10">10</div>
+                            <div id="store100">100</div>
+                            <div id="storemax">Max</div>
+                        </div>
                 <div id="producer-cursor" class="cursor producer"></div>
                 <div id="producer-grandma" class="grandma producer"></div>
                 <div id="producer-farm" class="farm producer"></div>
