--- a/public/index.html
+++ b/public/index.html
@@ -1,42 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title></title>
 </head>
+
 <body>
-        <div id="container">
-            <div id="left">
-                <div class="" id="big-cookie-container">
-                    <div id="amountOfCookies"></div>
-                    <span>Cookies per sec: </span><span id="all-cookies-per-sec"></span>
-                    <img id="big-cookie" src="/images/cookie.png" alt="">
-                </div>
-            </div>
-            <div id="left-separator"></div>
-            <div id="bottom">
-fdsafdsafs
-            </div>
-            <div id="right-seperator"></div>
-            <div id="right">
-                    <div id="buy-sell-mode">
-                        <div id="buy">Buy</div>
-                        <div id="sell">Sell</div>
-                            <div id="store1">1</div>
-                            <div id="store10">10</div>
-                            <div id="store100">100</div>
-                            <div id="storemax">Max</div>
-                        </div>
-                <div id="producer-cursor" class="cursor producer"></div>
-                <div id="producer-grandma" class="grandma producer"></div>
-                <div id="producer-farm" class="farm producer"></div>
-                <div id="producer-mine" class="mine producer"></div>
-                <div id="producer-factory" class="factory producer"></div>
-                <button id="save-data"></button>
+    <div id="container">
+        <div id="left">
+            <div class="" id="big-cookie-container">
+                <div id="amountOfCookies"></div>
+                <span>Cookies per sec: </span>
+                <span id="all-cookies-per-sec"></span>
+                <img id="big-cookie" alt="big Cookie">
             </div>
         </div>
-<script src="/bundle.js"></script>
+        <div id="left-separator"></div>
+        <div id="bottom">
+            fdsafdsafs
+        </div>
+        <div id="right-seperator"></div>
+        <div id="right">
+            <div id="buy-sell-mode">
+                <div class="buy-sell-con">
+                    <div id="buy">Buy</div>
+                    <div id="sell">Sell</div>
+                </div>
+
+                <div id="store1">1</div>
+                <div id="store10">10</div>
+                <div id="store100">100</div>
+                <div id="storemax">Max</div>
+            </div>
+            <div id="producer-cursor" class="cursor producer"></div>
+            <div id="producer-grandma" class="grandma producer"></div>
+            <div id="producer-farm" class="farm producer"></div>
+            <div id="producer-mine" class="mine producer"></div>
+            <div id="producer-factory" class="factory producer"></div>
+            <button id="save-data"></button>
+        </div>
+    </div>
+    <script src="/bundle.js"></script>
 </body>
+
 </html>
