--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title></title>
+    <title>Cookie Clicker</title>
     <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,800&amp;subset=latin-ext" rel="stylesheet">
 </head>
 
