index.html fix directory to bundle js

--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
             <div id="producer-bakery" class="bakery producer"></div>
         </div>
     </div>
-    <script src="/bundle.js"></script>
+    <script src="bundle.js"></script>
 </body>
 
 </html>
